--- a/index.html
+++ b/index.html
@@ -1,40 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="githubViewer">
 
 <head>
- 
   <script data-require="angular.js@*" data-semver="1.3.0-beta.5" src="https://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
   <script data-require="angular-route@*" data-semver="1.2.17" src="http://code.angularjs.org/1.2.17/angular-route.js"></script>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.min.css" />
   <script src="app.js"></script>
-  <script src="github.js"></script>
-  <script src="SearchController.js"></script>
+  <script src="githubService.js"></script>
+  <script src="MainController.js"></script>
+  <script src="UserController.js"></script>
 </head>
 
-<body ng-app="gitHubViewer">
+
+<body>
   <div class="container theme-showcase" role="main">
     <div class="page-header">
       <h1>Angular 101</h1>
-    </div>
-    <div class="row" ng-controller="SearchController">
-      <div class="col-sm-4">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Search Criteria</h3>
-          </div>
-
-
-          <form class="panel-body" ng-submit="search(username)">
-            <input class="span2" required type="text" placeholder="Enter usename" ng-model="username"></input>
-            <input type="submit" value="Search" class="btn btn-primary btn-large" />
-          </form>
-
-        </div>
-      </div>
+      <div ng-view></div>
     </div>
   </div>
-
 </body>
+
 
 </html>
