--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="githubViewer">
+<html>
 
 <head>
   <script data-require="angular.js@*" data-semver="1.3.0-beta.5" src="https://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
@@ -11,9 +11,7 @@
   <script src="MainController.js"></script>
   <script src="UserController.js"></script>
 </head>
-
-
-<body>
+<body ng-app="githubViewer">
   <div class="container theme-showcase" role="main">
     <div class="page-header">
       <h1>Angular 101</h1>
@@ -21,6 +19,4 @@
     </div>
   </div>
 </body>
-
-
 </html>
