--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="githubViewer">
 
 <head>
   <script data-require="angular.js@*" data-semver="1.3.0-beta.5" src="https://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
   <script data-require="angular-route@*" data-semver="1.2.17" src="http://code.angularjs.org/1.2.17/angular-route.js"></script>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="http://bootswatch.com/darkly/bootstrap.min.css" />
   <script src="app.js"></script>
   <script src="githubService.js"></script>
   <script src="MainController.js"></script>
   <script src="UserController.js"></script>
 </head>
-<body ng-app="githubViewer">
+<body>
   <div class="container theme-showcase" role="main">
     <div class="page-header">
       <h1>Angular 101</h1>
@@ -19,4 +19,6 @@
     </div>
   </div>
 </body>
+
+
 </html>
