--- a/user.html
+++ b/user.html
@@ -1,4 +1,18 @@
-<div>
-  {{user.name}}
+<div class="col-sm-4">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Search Results</h3>
+      <div class="panel-body">
+        <div>
+          {{user.name}}
+        </div>
+       <div ng-show="error">
+          {{error}}
+        </div>
+      </div>
+      <a href="#/main">Back to search</a>
+    </div>
+  </div>
 </div>
-<a href="#/main" >Back to search</a>
+
+ 
