--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="githubViewer">
 <head>
-  <script data-require="angular.js@*" data-semver="1.3.0-beta.5" src="https://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
+  <script data-require="angular.js@*" data-semver="1.3.0-beta.5" src="http://code.angularjs.org/1.3.0-beta.5/angular.js"></script>
   <script data-require="angular-route@*" data-semver="1.2.17" src="http://code.angularjs.org/1.2.17/angular-route.js"></script>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="http://bootswatch.com/darkly/bootstrap.min.css" />
