Update user page to show repo size

--- a/user.html
+++ b/user.html
@@ -8,7 +8,7 @@
         </h3>
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="repo in repos">
-            <span class="badge">{{repo.id}}</span>
+            <span class="badge">{{repo.size}}</span>
             <a href="{{repo.html_url}}">{{repo.name}} ({{repo.language}})</a>
           </li>
         </ul>
